--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-demo</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static/TunnelRealTemp.ico">
+    <title>虹梅南路隧道火灾救援辅助系统</title>
   </head>
   <body>
     <div id="app"></div>
